# warpXstreams

./: .gitattributes  .gitignore  CMakeLists.txt  Config.h  FilterStreamlines.h  README.md  SeedGenerator.hxx  SeedingConfig.h  SeedingOptions.cxx  SeedingOptions.hxx  ValidateOptions.hxx  advection.cxx  params  roofexperiments  roofexperiments.cxx  roofline.run  savedata.cxx  simpledata.cxx  vtkmfilter.cxx
data/: simple.vtk  structured.vtk  unstructured.vtk
roofline/: 032520-1  032620-1  032620-2  parse_results.py
